--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 	family=Roboto:wght@400;700&
 
-	display=swap&_v=20220811132113" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220811132113">
+	display=swap&_v=20220815192902" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css?_v=20220815192902">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220815192902">
 </head>
 
 <body>
-	<div class="wrapper">
+	<div class="wrapper" id="top">
 		<header class="header">
 	<div class="header__container-big">
 		<div class="header__wrapper">
@@ -31,12 +32,12 @@
 						<nav id="nav" class="menu__body">
 							<!-- <div id="pointer" class="menu__pointer"></div> -->
 							<ul class="menu__list">
-								<li><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">Employers</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">Members</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">About</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">Blog</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Employers</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Members</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">About</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Blog</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -140,7 +141,7 @@
 								hardships don't become financial burdens.
 							</p>
 							<p>
-								<a href="##" class="content__more why__more">See our plan</a>
+								<a href="##" class="content__more underline why__more">See our plan</a>
 							</p>
 						</div>
 						<div class="why__stats stats">
@@ -156,7 +157,7 @@
 								</div>
 								<div class="stats__columns column">
 									<div class="column__item column__deductible deductible"">
-										<div class=" column__absolute column__price">
+												<div class=" column__absolute column__price">
 										$ <span data-digits-counter="700">1644</span>
 									</div>
 									<div class="column__value deductible__value _anim-item _anim-no-hide">
@@ -190,15 +191,15 @@
 				</div>
 	</div>
 	</section>
-	<section class="brings">
-		<div class="brings__wrapper">
-			<div class="brings__container">
-				<h3 class="subtitle brings__subtitle">
+	<section class="brings full-screen-section">
+		<div class="full-screen-section__wrapper brings__wrapper">
+			<div class="full-screen-section__container brings__container">
+				<h4 class="subtitle brings__subtitle">
 					brella brings
-				</h3>
-				<div class="brings__body">
-					<div class="brings-block brings-block__1">
-						<div class="brings-bg brings-bg__1">
+				</h4>
+				<div class="full-screen-section__body brings__body">
+					<div class="full-screen-section-block full-screen-section-block__1 brings-block brings-block__1">
+						<div class="full-screen-section-bg full-screen-section-bg__1 brings-bg brings-bg__1">
 						</div>
 						<div class="brings-content brings-content__1">
 							<div class="brings-text brings-text__1">
@@ -223,8 +224,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="brings-block brings-block__2">
-						<div class="brings-bg brings-bg__2">
+					<div class="full-screen-section-block full-screen-section-block__2 brings-block brings-block__2">
+						<div class="full-screen-section-bg full-screen-section-bg__2 brings-bg brings-bg__2">
 						</div>
 						<div class="brings-content brings-content__2">
 							<div class="brings-text brings-text__2">
@@ -246,7 +247,7 @@
 			<div class="plan__body">
 				<div class="plan__content">
 					<div class="type-block plan__info">
-						<h3 class="subtitle plan__subtitle">
+						<h4 class="subtitle plan__subtitle">
 							one plan, more coverage
 							</p>
 							<h2 class="title plan__title">
@@ -287,22 +288,23 @@
 		<div class="exp__container">
 			<div class="exp__body">
 				<div class="exp__img">
-					<img src="img/gif/phone.gif" alt="">
+					<img src="img/gifs/phone.gif" alt="">
 				</div>
 				<div class="type-block exp__content">
-					<h3 class="subtitle exp__subtitle">
+					<h4 class="subtitle exp__subtitle">
 						a better claims experience
-					</h3>
+					</h4>
 					<h2 class="title exp__title">
 						Give your people a plan that pays in hours—not weeks.
 					</h2>
 					<p class="text exp__text">
-						Your team can’t wait for peace of mind. Brella pays on diagnosis, so members can file a claim sooner
+						Your team can’t wait for peace of mind. Brella pays on diagnosis, so members can file a claim
+						sooner
 						and
 						get paid faster via our Member Portal or mobile app.
 					</p>
 					<p>
-						<a href="##" class="content__more exp__more">Play Video</a>
+						<a href="##" class="content__more underline exp__more">Play Video</a>
 					</p>
 				</div>
 			</div>
@@ -312,32 +314,219 @@
 		<div class="employers__container">
 			<div class="employers__body">
 				<div class="type-block employers__content">
-					<h3 class="subtitle employers__subtitle">
+					<h4 class="subtitle employers__subtitle">
 						for employers
-					</h3>
+					</h4>
 					<h2 class="title employers__title">
 						Easy enrollment meets simple administration.
 					</h2>
 					<p class="text employers__text">
-						Brella brings 100% paperless implementation, enrollment, and admin. Plug into our platforms or we’ll
+						Brella brings 100% paperless implementation, enrollment, and admin. Plug into our platforms or
+						we’ll
 						plug
 						into yours.
 					</p>
 					<p>
-						<a href="##" class="content__more employers__more">Learn more</a>
+						<a href="##" class="content__more underline employers__more">Learn more</a>
 					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="sponsor">
+		<div class="sponsor__container-big">
+			<div class="sponsor__container">
+				<h2 class="title sponsor__title">
+					Proudly backed by
+				</h2>
+			</div>
+			<div class="sponsor-slider__container">
+				<div class="sponsor__container-small">
+					<div class="swiper sponsor__slider">
+						<div class="swiper-wrapper sponsor__wrapper">
+							<div class="swiper-slide sponsor__slide">
+								<div class="sponsor__img">
+									<img class="svg-brewer-lane-dims" src="img/icons/icons.svg#brewer-lane" alt="">
+								</div>
+							</div>
+							<div class="swiper-slide sponsor__slide">
+								<div class="sponsor__img">
+									<img class="svg-two-sigma-dims" src="img/icons/icons.svg#two-sigma" alt="">
+								</div>
+							</div>
+							<div class="swiper-slide sponsor__slide">
+								<div class="sponsor__img">
+									<img class="svg-digitalis-dims" src="img/icons/icons.svg#digitalis" alt="">
+								</div>
+							</div>
+							<div class="swiper-slide sponsor__slide">
+								<div class="sponsor__img">
+									<img class="svg-founder-dims" src="img/icons/icons.svg#founder" alt="">
+								</div>
+							</div>
+							<div class="swiper-slide sponsor__slide">
+								<div class="sponsor__img">
+									<img class="svg-symphony-all-dims" src="img/icons/icons.svg#symphony-all" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="swiper-button-prev sponsor__button-prev icon-arrow-left"></div>
+						<div class="swiper-button-next sponsor__button-next icon-arrow-right"></div>
+					</div>
+				</div>
+			</div>
+			<hr class="sponsor__line">
+		</div>
+	</section>
+	<section class="posts">
+		<div class="posts__container">
+			<div class="posts__wrapper">
+				<a href="##" class="posts__post post">
+					<div class="post__img">
+						<picture><source srcset="img/podcast.webp" type="image/webp"><img src="img/podcast.jpg" alt=""></picture>
+					</div>
+					<h4 class="subtitle post__subtitle">Podcast</h4>
+					<h3 class="title post__title">
+						Better Voluntary Benefits with NFP Voluntary Benefits Practice Leader, Kim Heald
+					</h3>
+				</a>
+				<a href="##" class="posts__post post">
+					<div class="post__img">
+						<picture><source srcset="img/innovation.webp" type="image/webp"><img src="img/innovation.jpg" alt=""></picture>
+					</div>
+					<h4 class="subtitle post__subtitle">Insurance Innovation</h4>
+					<h3 class="title post__title">
+						How to Design Simpler Insurance Benefits
+					</h3>
+				</a>
+				<a href="##" class="posts__post post">
+					<div class="post__img">
+						<picture><source srcset="img/strategy.webp" type="image/webp"><img src="img/strategy.jpg" alt=""></picture>
+					</div>
+					<h4 class="subtitle post__subtitle">Benefits Strategy</h4>
+					<h3 class="title post__title">
+						Executive Benefits Outlook with Dan Aceti
+					</h3>
+				</a>
+			</div>
+		</div>
+	</section>
+	<section class="start full-screen-section">
+		<div class="full-screen-section__wrapper start__wrapper">
+			<div class="full-screen-section__container start__container">
+				<div class="full-screen-section__body start__body">
+					<div class="full-screen-section-block full-screen-section-block__1 start-block start-block__1">
+						<div class="full-screen-section-bg full-screen-section-bg__1 start-bg start-bg__1">
+							<picture><source srcset="img/cta-bg.webp" type="image/webp"><img src="img/cta-bg.jpg" alt=""></picture>
+						</div>
+					</div>
+					<div class="full-screen-section-block full-screen-section-block__2 start-block start-block__2">
+						<div class="full-screen-section-bg full-screen-section-bg__2 start-bg start-bg__2">
+						</div>
+						<div class="full-screen-section__content start__content">
+							<h2 class="title start__title">
+								<p>Ready to explore Brella’s supplemental health solution?</p>
+								<p>Let’s talk.</p>
+							</h2>
+							<button class="btn btn__green start__btn">
+								Get in touch
+							</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	</main>
 	<footer class="footer">
-    <div class="footer__container">
-
-    </div>
+	<div class="footer__container">
+		<div class="footer__main main-footer">
+			<div class="main-footer__content">
+				<div class="main-footer__menu footer-menu">
+					<a href="#top" class="footer-menu__logo icon-logo">
+					</a>
+					<ul class="footer-menu__block">
+						<li class="footer-menu__title underline">
+							<a href="##">Join Brella</a>
+						</li>
+						<li class="underline"><a href="##">Our Plan</li>
+						<li class="underline"><a href="##">Employers</a></li>
+						<li class="underline"><a href="##">Brokers</a></li>
+						<li class="underline"><a href="##">Members</a></li>
+					</ul>
+					<ul class="footer-menu__block">
+						<li class="footer-menu__title underline">
+							<a href="##">Company</a>
+						</li>
+						<li class="underline"><a href="##">About</a></li>
+						<li class="underline"><a href="##">Blog</a></li>
+						<li class="underline"><a href="##">Careers</a></li>
+						<li class="underline"><a href="##">Contact</a></li>
+					</ul>
+				</div>
+				<div class="main-footer__contact contact">
+					<div class="contact__text">
+						<p class="contact__title">Get the latest</p>
+						<p>Sign up to receive benefits news and insights in your inbox once a month.</p>
+					</div>
+					<form class="contact__form" action="##">
+						<input type="email" name="email" id="email" placeholder="Email*">
+						<button type="submit" class="icon-arrow-right"></button>
+					</form>
+					<div class="contact__icons">
+						<a href="##" class="contact__link contact__linked-in icon-linked-in">
+						</a>
+						<a href="##" class="contact__link contact__twitter icon-twitter">
+						</a>
+						<a href="##" class="contact__link contact__youtube icon-youtube">
+						</a>
+					</div>
+				</div>
+			</div>
+			<hr>
+		</div>
+		<div class="footer__desc desc-footer">
+			<p>
+				Brella is a limited benefit policy; it is not a substitute for health insurance. The information provided on
+				this website is illustrative only. A complete description of benefits, limitations, and exclusions are
+				provided in your certificate of Insurance and applicable Riders. For a summary of limitations and
+				exclusions, see our FAQ. Payout values listed do not guarantee an amount to be paid for listed conditions.
+				Product not available in all states. All coverage is subject to the terms and conditions of the master group
+				policy.
+			</p>
+			<p>
+				Brella is underwritten by
+				<span class="addres__underwritten">
+					Greenhouse Life Insurance Company (NAIC 80055). Form No. PFSB11-TX
+				</span>
+			</p>
+			<p>
+				Reach us by mail at
+				<span class="addres__mail">
+					2093 Philadelphia Pike #2496, Claymont, DE 19703
+				</span>
+				and by phone at
+				<span class="phone">
+					(844) 987-1070
+				</span>
+				.
+			</p>
+		</div>
+		<div class="footer__rights rights-footer">
+			<p>© 2021 Brella Insurance Inc. All Rights Reserved.</p>
+			<div class="rights-footer__links">
+				<div class="rights-footer__link rights-footer__link-privacy">
+					<a href="##" class="underline">Privacy</a>
+				</div>
+				<div class="rights-footer__link rights-footer__link-terms">
+					<a href="##" class="underline">Terms of Service</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220811132113"></script>
+	<script src="js/app.min.js?_v=20220815192902"></script>
 </body>
 
 </html>
