--- a/html/footer.html
+++ b/html/footer.html
@@ -5,24 +5,28 @@
 				<div class="main-footer__menu footer-menu">
 					<a href="#top" class="footer-menu__logo icon-logo">
 					</a>
-					<ul class="footer-menu__block">
-						<li class="footer-menu__title underline">
-							<a href="##">Join Brella</a>
-						</li>
-						<li class="underline"><a href="##">Our Plan</li>
-						<li class="underline"><a href="##">Employers</a></li>
-						<li class="underline"><a href="##">Brokers</a></li>
-						<li class="underline"><a href="##">Members</a></li>
-					</ul>
-					<ul class="footer-menu__block">
-						<li class="footer-menu__title underline">
-							<a href="##">Company</a>
-						</li>
-						<li class="underline"><a href="##">About</a></li>
-						<li class="underline"><a href="##">Blog</a></li>
-						<li class="underline"><a href="##">Careers</a></li>
-						<li class="underline"><a href="##">Contact</a></li>
-					</ul>
+					<div class="footer-menu__lists">
+						<ul class="footer-menu__block">
+							<li class="footer-menu__title underline">
+								<a href="##">Join Brella</a>
+							</li>
+							<li class="underline"><a href="##">Our Plan</li>
+							<li class="underline"><a href="##">Employers</a></li>
+							<li class="underline"><a href="##">Brokers</a></li>
+							<li class="underline"><a href="##">Members</a></li>
+
+						</ul>
+						<ul class="footer-menu__block">
+							<li class="footer-menu__title underline">
+								<a href="##">Company</a>
+							</li>
+							<li class="underline"><a href="##">About</a></li>
+							<li class="underline"><a href="##">Blog</a></li>
+							<li class="underline"><a href="##">Careers</a></li>
+							<li class="underline"><a href="##">Contact</a></li>
+
+						</ul>
+					</div>
 				</div>
 				<div class="main-footer__contact contact">
 					<div class="contact__text">
@@ -31,14 +35,38 @@
 					</div>
 					<form class="contact__form" action="##">
 						<input type="email" name="email" id="email" placeholder="Email*">
-						<button type="submit" class="icon-arrow-right"></button>
+						<button type="submit">
+							<svg width="19" height="13" viewBox="0 0 19 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path
+									d="M0 7.17114H15.9551L10.6774 11.9519L11.8344 13L17.8429 7.5389H17.8632L19 6.50919L17.8632 5.4611H17.8429L11.8344 0L10.6774 1.04809L15.8333 5.70014H0V7.17114Z"
+									fill="#214E41" />
+							</svg>
+						</button>
 					</form>
 					<div class="contact__icons">
-						<a href="##" class="contact__link contact__linked-in icon-linked-in">
+						<a href="##" class="contact__link contact__linked-in">
+							<svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path
+									d="M24.0807 0H1.91931C1.41027 0 0.922092 0.202212 0.562152 0.562152C0.202212 0.922092 0 1.41027 0 1.91931V24.0807C0 24.5897 0.202212 25.0779 0.562152 25.4379C0.922092 25.7978 1.41027 26 1.91931 26H24.0807C24.5897 26 25.0779 25.7978 25.4379 25.4379C25.7978 25.0779 26 24.5897 26 24.0807V1.91931C26 1.41027 25.7978 0.922092 25.4379 0.562152C25.0779 0.202212 24.5897 0 24.0807 0ZM7.74944 22.1488H3.84042V9.73195H7.74944V22.1488ZM5.79222 8.01125C5.34881 8.00875 4.91608 7.87496 4.54863 7.62676C4.18118 7.37856 3.89549 7.02708 3.72762 6.61666C3.55974 6.20625 3.5172 5.75531 3.60537 5.32074C3.69353 4.88618 3.90845 4.48747 4.223 4.17493C4.53755 3.86239 4.93763 3.65004 5.37276 3.56467C5.80788 3.47929 6.25854 3.52473 6.66786 3.69523C7.07719 3.86574 7.42683 4.15368 7.67267 4.52271C7.91851 4.89175 8.04952 5.32533 8.04917 5.76875C8.05335 6.06562 7.99772 6.36029 7.8856 6.63521C7.77347 6.91012 7.60715 7.15964 7.39654 7.36891C7.18592 7.57817 6.93534 7.74289 6.65971 7.85325C6.38408 7.9636 6.08906 8.01734 5.79222 8.01125ZM22.1578 22.1596H18.2506V15.3761C18.2506 13.3756 17.4001 12.7581 16.3024 12.7581C15.1432 12.7581 14.0057 13.6319 14.0057 15.4267V22.1596H10.0967V9.74097H13.8558V11.4617H13.9064C14.2838 10.6979 15.6054 9.3925 17.6222 9.3925C19.8033 9.3925 22.1596 10.6871 22.1596 14.4788L22.1578 22.1596Z"
+									fill="white" />
+							</svg>
+
 						</a>
-						<a href="##" class="contact__link contact__twitter icon-twitter">
+						<a href="##" class="contact__link contact__twitter">
+							<svg width="26" height="22" viewBox="0 0 26 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path
+									d="M8.17648 21.5629C17.9878 21.5629 23.3542 13.4343 23.3542 6.38512C23.3542 6.15424 23.3542 5.9244 23.3386 5.6956C24.3826 4.94047 25.2838 4.00548 26 2.9344C25.0265 3.366 23.9937 3.64892 22.9362 3.77368C24.0498 3.10709 24.8833 2.05853 25.2814 0.823196C24.2343 1.44461 23.0887 1.88251 21.8941 2.118C21.0898 1.26279 20.0261 0.696491 18.8675 0.506737C17.709 0.316984 16.5202 0.514353 15.4851 1.06831C14.4501 1.62226 13.6264 2.5019 13.1416 3.57113C12.6569 4.64035 12.538 5.83954 12.8034 6.98312C10.6826 6.87673 8.6079 6.32557 6.71391 5.36541C4.81992 4.40524 3.14899 3.05753 1.8096 1.40976C1.12746 2.58409 0.918528 3.97426 1.22536 5.29722C1.53219 6.62018 2.3317 7.77646 3.46112 8.53064C2.61217 8.50577 1.7817 8.27674 1.04 7.86296V7.93056C1.04034 9.16215 1.46667 10.3557 2.24669 11.3088C3.02672 12.2619 4.1124 12.9159 5.3196 13.1597C4.53427 13.3739 3.71028 13.4052 2.91096 13.2512C3.25197 14.3111 3.91563 15.2379 4.80918 15.9021C5.70272 16.5663 6.78148 16.9347 7.89464 16.9557C6.78864 17.8251 5.52209 18.4678 4.16745 18.8472C2.8128 19.2266 1.39665 19.3352 0 19.1668C2.43949 20.7322 5.27792 21.5626 8.17648 21.5588"
+									fill="#FAFAFA" />
+							</svg>
+
 						</a>
-						<a href="##" class="contact__link contact__youtube icon-youtube">
+						<a href="##" class="contact__link contact__youtube">
+							<svg width="26" height="20" viewBox="0 0 26 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" clip-rule="evenodd"
+									d="M24.6417 2.23686C25.0451 2.64286 25.3348 3.14769 25.4818 3.70082C26.0254 5.74241 26.0254 9.9999 26.0254 9.9999C26.0254 9.9999 26.0254 14.2574 25.4818 16.299C25.3348 16.8521 25.0451 17.357 24.6417 17.763C24.2383 18.169 23.7353 18.4619 23.1831 18.6124C21.1504 19.159 13.0254 19.159 13.0254 19.159C13.0254 19.159 4.90039 19.159 2.86766 18.6124C2.31548 18.4619 1.81252 18.169 1.40912 17.763C1.00572 17.357 0.716022 16.8521 0.569027 16.299C0.0253906 14.2574 0.0253906 9.9999 0.0253906 9.9999C0.0253906 9.9999 0.0253906 5.74241 0.569027 3.70082C0.716022 3.14769 1.00572 2.64286 1.40912 2.23686C1.81252 1.83087 2.31548 1.53795 2.86766 1.38741C4.90039 0.84082 13.0254 0.84082 13.0254 0.84082C13.0254 0.84082 21.1504 0.84082 23.1831 1.38741C23.7353 1.53795 24.2383 1.83087 24.6417 2.23686ZM10.3672 6.13379V13.8659L17.1626 9.99986L10.3672 6.13379Z"
+									fill="#FAFAFA" />
+							</svg>
+
 						</a>
 					</div>
 				</div>
