--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 				<div class="hero__content">
 					<div class="hero__container">
 						<div class="hero__offer offer">
-							<h2 class="offer__title title _anim-item _not-active">
+							<h2 class="offer__title title _anim-item _not-active _from-bottom">
 								Give your team peace of mind with supplemental health insurance from Brella.
 							</h2>
-							<div class="text offer__text _anim-item _not-active">
+							<div class="text offer__text _anim-item _not-active _from-bottom">
 								<p>I'm wondering...</p>
 							</div>
-							<form action="##" class="offer__form _anim-item _not-active">
+							<form action="##" class="offer__form _anim-item _not-active _from-bottom">
 								<input type="text" placeholder="how Brella's plan works" name="offer" class="offer__input">
 								<button type="submit" class="btn btn__green offer__submit">Find out</button>
 							</form>
