--- a/html/header.html
+++ b/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header _anim-item _anim-scale _anim-no-hide _not-active">
 	<div class="header__container-big">
 		<div class="header__wrapper">
 			<div class="header__logo">
@@ -27,7 +27,7 @@
 					<div class="header__menu menu">
 						<nav id="nav" class="menu__body">
 							<!-- <div id="pointer" class="menu__pointer"></div> -->
-							<ul class="menu__list">
+							<ul class="menu__list _anim-item _not-active _anim-translate_left">
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Employers</a></li>
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
