--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 	family=Roboto:wght@400;700&
 
-	display=swap&_v=20220822174807" rel="stylesheet">
-	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css?_v=20220822174807">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220822174807">
+	display=swap&_v=20220824191555" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css?_v=20220824191555">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220824191555">
 </head>
 
 <body>
 	<div class="wrapper" id="top">
-		<header class="header">
+		<header class="header _anim-item _anim-scale _anim-no-hide _not-active">
 	<div class="header__container-big">
 		<div class="header__wrapper">
 			<div class="header__logo">
@@ -48,7 +48,7 @@
 					<div class="header__menu menu">
 						<nav id="nav" class="menu__body">
 							<!-- <div id="pointer" class="menu__pointer"></div> -->
-							<ul class="menu__list">
+							<ul class="menu__list _anim-item _not-active _anim-translate_left">
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Employers</a></li>
 								<li class="underline"><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
@@ -89,18 +89,19 @@
 				<div class="hero__content">
 					<div class="hero__container">
 						<div class="hero__offer offer">
-							<h2 class="offer__title title _anim-item _not-active _from-bottom">
+							<h2 class="offer__title title _anim-item _anim-translate_bottom _anim-delay_200 _not-active">
 								Give your team peace of mind with supplemental health insurance from Brella.
 							</h2>
-							<div class="text offer__text _anim-item _not-active _from-bottom">
+							<div class="text offer__text _anim-item _anim-translate_bottom _anim-delay_400 _not-active">
 								<p>I'm wondering...</p>
 							</div>
-							<form action="##" class="offer__form _anim-item _not-active _from-bottom">
+							<form action="##"
+								class="offer__form _anim-item _anim-translate_bottom _anim-delay_600 _not-active">
 								<input type="text" placeholder="how Brella's plan works" name="offer" class="offer__input">
 								<button type="submit" class="btn btn__green offer__submit">Find out</button>
 							</form>
 						</div>
-						<div class="hero__features features">
+						<div class="hero__features features _anim-item _anim-scale _not-active">
 							<div class="features__block block-features">
 								<div class="block-features__img">
 									<picture><source srcset="img/coverage.webp" type="image/webp"><img src="img/coverage.png" alt=""></picture>
@@ -148,17 +149,17 @@
 				<div class="why__container">
 					<div class="why__body">
 						<div class="type-block why__content">
-							<h3 class="why__subtitle subtitle">
+							<h3 class="why__subtitle subtitle _anim-item _anim-translate_left _not-active">
 								Why Brella?
 							</h3>
-							<h2 class="why__title title">
+							<h2 class="why__title title _anim-item _anim-translate_left _anim-delay_200 _not-active">
 								Today, any health insurance deductible can feel like a high deductible.
 							</h2>
-							<p class="text why__text">
+							<p class="text why__text _anim-item _anim-translate_left _anim-delay_400 _not-active">
 								Brella's supplemental health plan enhances your health benefit strategy to ensure that health
 								hardships don't become financial burdens.
 							</p>
-							<p>
+							<p class="_anim-item _anim-translate_left _anim-delay_600 _not-active">
 								<a href="##" class="content__more underline why__more">See our plan</a>
 							</p>
 						</div>
@@ -217,7 +218,8 @@
 				</h4>
 				<div class="full-screen-section__body brings__body">
 					<div class="full-screen-section-block full-screen-section-block__1 brings-block brings-block__1">
-						<div class="full-screen-section-bg full-screen-section-bg__1 brings-bg brings-bg__1">
+						<div
+							class="full-screen-section-bg full-screen-section-bg__1 brings-bg brings-bg__1  _anim-item _anim-linear-block_right _anim-no-hide _not-active">
 						</div>
 						<div class="brings-content brings-content__1">
 							<div class="brings-text brings-text__1">
@@ -243,7 +245,8 @@
 						</div>
 					</div>
 					<div class="full-screen-section-block full-screen-section-block__2 brings-block brings-block__2">
-						<div class="full-screen-section-bg full-screen-section-bg__2 brings-bg brings-bg__2">
+						<div
+							class="full-screen-section-bg full-screen-section-bg__2 brings-bg brings-bg__2 _anim-item _anim-linear-block_left _anim-no-hide _not-active">
 						</div>
 						<div class="brings-content brings-content__2">
 							<div class="brings-text brings-text__2">
@@ -265,17 +268,17 @@
 			<div class="plan__body">
 				<div class="plan__content">
 					<div class="type-block plan__info">
-						<h4 class="subtitle plan__subtitle">
+						<h4 class="subtitle plan__subtitle _anim-item _anim-translate_left _not-active">
 							one plan, more coverage
-							</p>
-							<h2 class="title plan__title">
-								No one can predict which health issues might come their way.
-							</h2>
-							<p class="text plan__text">
-								Our broad supplemental coverage gets rid of the guesswork and puts cash in your team’s pockets
-								for
-								most conditions that require urgent medical attention.
-							</p>
+						</h4>
+						<h2 class="title plan__title _anim-item _anim-translate_left _anim-delay_200 _not-active">
+							No one can predict which health issues might come their way.
+						</h2>
+						<p class="text plan__text _anim-item _anim-translate_left _anim-delay_400 _not-active">
+							Our broad supplemental coverage gets rid of the guesswork and puts cash in your team’s pockets
+							for
+							most conditions that require urgent medical attention.
+						</p>
 					</div>
 					<div class="plan__img no-webp">
 						<picture><source srcset="img/plan.webp" type="image/webp"><img src="img/plan.png" class="no-webp" alt="family"></picture>
@@ -284,19 +287,24 @@
 				<div class="plan__numbers">
 					<div class="plan__block">
 						<div class="plan__number"><span data-digits-counter>5</span>K</div>
-						<p class="plan__desc">covered injuries and illnesses from fractures and appendicitis to cancer</p>
+						<p class="plan__desc _anim-item _anim-translate_bottom _anim-delay_200 _not-active">covered injuries
+							and illnesses from fractures and appendicitis to cancer</p>
 					</div>
 					<div class="plan__block">
 						<div class="plan__number"><span data-digits-counter>1</span>X</div>
-						<p class="plan__desc">more covered conditions than Accident and Critical Illness plans—combined</p>
+						<p class="plan__desc _anim-item _anim-translate_bottom _anim-delay_400 _not-active">more covered
+							conditions than Accident and Critical Illness plans—combined</p>
 					</div>
 					<div class="plan__block">
 						<div class="plan__number"><span data-digits-counter>40</span>%</div>
-						<p class="plan__desc">plans are 100% guaranteed issue. No medical underwriting required</p>
+						<p class="plan__desc _anim-item _anim-translate_bottom _anim-delay_600 _not-active">plans are 100%
+							guaranteed issue. No medical underwriting required</p>
 					</div>
 					<div class="plan__block">
 						<div class="plan__number"><span data-digits-counter>0</span></div>
-						<p class="plan__desc">Zero limitations or exclusions for pre-existing conditions</p>
+						<p class="plan__desc _anim-item _anim-translate_bottom _anim-delay_800 _not-active">Zero limitations
+							or
+							exclusions for pre-existing conditions</p>
 					</div>
 				</div>
 			</div>
@@ -305,47 +313,51 @@
 	<section class="exp">
 		<div class="exp__container">
 			<div class="exp__body">
-				<div class="exp__img">
-					<img src="img/gifs/phone.gif" alt="">
+				<div class="exp__video _anim-translate_bottom _anim-translate_z _not-active">
+					<img src="files/gif/phone.gif" alt="">
 				</div>
 				<div class="type-block exp__content">
-					<h4 class="subtitle exp__subtitle">
+					<h4 class="subtitle exp__subtitle _anim-item _anim-translate_right _not-active">
 						a better claims experience
 					</h4>
-					<h2 class="title exp__title">
+					<h2 class="title exp__title _anim-item _anim-translate_right _anim-delay_200 _not-active">
 						Give your people a plan that pays in hours—not weeks.
 					</h2>
-					<p class="text exp__text">
+					<p class="text exp__text _anim-item _anim-translate_right _anim-delay_400 _not-active">
 						Your team can’t wait for peace of mind. Brella pays on diagnosis, so members can file a claim
 						sooner
 						and
 						get paid faster via our Member Portal or mobile app.
 					</p>
 					<p>
-						<a href="##" class="content__more underline exp__more">Play Video</a>
+						<button type="button"
+							class="content__more underline exp__play _anim-item _anim-translate_right _anim-delay_600 _not-active">Play
+							Video</button>
 					</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="employers">
+	<section class="employers _anim-item _not-active">
 		<div class="employers__container">
 			<div class="employers__body">
 				<div class="type-block employers__content">
-					<h4 class="subtitle employers__subtitle">
+					<h4 class="subtitle employers__subtitle _anim-item _anim-translate_left _not-active">
 						for employers
 					</h4>
-					<h2 class="title employers__title">
+					<h2 class="title employers__title _anim-item _anim-translate_left _anim-delay_200 _not-active">
 						Easy enrollment meets simple administration.
 					</h2>
-					<p class="text employers__text">
+					<p class="text employers__text _anim-item _anim-translate_left _anim-delay_400 _not-active">
 						Brella brings 100% paperless implementation, enrollment, and admin. Plug into our platforms or
 						we’ll
 						plug
 						into yours.
 					</p>
 					<p>
-						<a href="##" class="content__more underline employers__more">Learn more</a>
+						<a href="##"
+							class="content__more underline employers__more _anim-item _anim-translate_left _anim-delay_600 _not-active">Learn
+							more</a>
 					</p>
 				</div>
 			</div>
@@ -445,7 +457,7 @@
 	<section class="posts">
 		<div class="posts__container">
 			<div class="posts__wrapper">
-				<a href="##" class="posts__post post">
+				<a href="##" class="posts__post post _anim-item _anim-translate_left _not-active">
 					<div class="post__img">
 						<picture><source srcset="img/podcast.webp" type="image/webp"><img src="img/podcast.jpg" alt=""></picture>
 					</div>
@@ -454,7 +466,7 @@
 						Better Voluntary Benefits with NFP Voluntary Benefits Practice Leader, Kim Heald
 					</h3>
 				</a>
-				<a href="##" class="posts__post post">
+				<a href="##" class="posts__post post _anim-item _anim-translate_top _anim-delay_200 _not-active">
 					<div class="post__img">
 						<picture><source srcset="img/innovation.webp" type="image/webp"><img src="img/innovation.jpg" alt=""></picture>
 					</div>
@@ -463,7 +475,7 @@
 						How to Design Simpler Insurance Benefits
 					</h3>
 				</a>
-				<a href="##" class="posts__post post">
+				<a href="##" class="posts__post post _anim-item _anim-translate_right _not-active">
 					<div class="post__img">
 						<picture><source srcset="img/strategy.webp" type="image/webp"><img src="img/strategy.jpg" alt=""></picture>
 					</div>
@@ -624,7 +636,7 @@
 	</div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220822174807"></script>
+	<script src="js/app.min.js?_v=20220824191555"></script>
 </body>
 
 </html>
